--- a/css/main.css
+++ b/css/main.css
@@ -60,17 +60,17 @@ html {
   --instagram: linear-gradient(to right, var(--ig-1), var(--ig-2));
   --youtube: linear-gradient(to right, var(--yt), var(--yt));
 
-  /* Light theme as default */
-  color-scheme: light;
+  /* Dark theme as default */
+  color-scheme: dark;
 
   /* Defaults */
-  --toggle: var(--toggle-gradient-light);
-  --bg-site: var(--bg-site-light);
-  --bg-top-pattern: var(--bg-top-pattern-light);
-  --bg-card: var(--bg-card-light);
-  --bg-card-hover: var(--bg-card-hover-light);
-  --text-1: var(--text-1-light);
-  --text-2: var(--text-2-light);
+  --toggle: var(--toggle-gradient-dark);
+  --bg-site: var(--bg-site-dark);
+  --bg-top-pattern: var(--bg-top-pattern-dark);
+  --bg-card: var(--bg-card-dark);
+  --bg-card-hover: var(--bg-card-hover-dark);
+  --text-1: var(--text-1-dark);
+  --text-2: var(--text-2-dark);
 
   /* Sizes */
   --size-0: -0.25rem;
